-bug: Reduce the total number of SQL queries called
-bug: Replace inefficient strip function in process_poller_output
-bug: Some php_snmp implementations return strings as "Hex-STRING:".  In these cases properly resolve the string
-bug: Correctly assign right and left click actions for Opera
-bug: Fix SQL error when viewing an invalid Data Source via the Log Viewer
-feature: Paginate the Graph Creation Page
-feature: Add rra_path as a global.php config variable
-feature: Add drop down actions to data queries
-feature: Add drop down actions to data input methods
-feature: Add drop down actions to user administration
-feature: Add filtering and pagination to data queries
-feature: Add filtering and pagination to data input methods
-feature: Add filtering and pagination to host templates
-feature: Add filtering and pagination to user administration
-feature: Add Web Basic authentication
-feature: Add authenication realm to modifiable user parameters
-feature: Add multiple polling intervals
-feature: Moved command line scripts to cli sub directory
-feature: include/config.php now only includes database configuration
-feature: include/config_* have been renamed to include/global_*. Note: Script servers need to be updated.
-feature: Allow VRULE's in Cacti to specify an absolute timestamp in addition to [+/-]HH:MM
-feature: Add 1 minute RRA and graph templates
-feature: Add item select highlighting to main pages
-feature: Let poller.php be more intelligent about poller intervals less than 60 seconds
-feature: Add consistency to Filters by adding nowrap to td items
-feature: Add Graph and Data Source counts to Device page
-feature: Add Poller Interval to Data Sources page
-feature: Keep filters aligned with main page content on window resize
-feature: Add Enable/Disable user
-feature: Reduce ADODB memory consumption during polling
-compat: Add additional checking due to php-snmp changes in Windows

0.8.6j